# barracuda

./: Cargo.toml  README.md
src/: main.rs
src/barracuda/: b_runner.rs  debugger.rs  mcts.rs  mod.rs  traits.rs
src/barracuda/b_core/: mod.rs  params.rs
src/barracuda/b_core/algorithms/: mod.rs
src/barracuda/b_core/algorithms/extensions/: mast.rs  mod.rs  rave.rs  t_table.rs
src/barracuda/b_core/algorithms/policy/: mod.rs  softmax.rs  uniform.rs
src/barracuda/b_core/algorithms/simulate/: evaluate.rs  mod.rs  random_playout.rs
src/barracuda/b_core/algorithms/ucb/: exploration.rs  formula.rs  mod.rs  p_bias.rs  random.rs  value.rs
src/barracuda/b_core/components/: backprop.rs  mod.rs  policy.rs  simulate.rs  static_eval.rs  ucb.rs
src/cf/: cf.rs  cf_eval.rs  mod.rs
src/cli/: cli.rs
src/tictactoe/: ttt.rs
