[package]
name = "barracuda"
version = "0.1.0"
authors = ["doruk <dsekercioglu2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 
[dependencies]
rand = "*"
text_io = "*"
enigo = "*"
unroll = "*"

[profile.release]
lto = "fat"